--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,6 @@
     "jquery": "~3.1.1",
     "angularjs": "~1.5.8",
     "fontawesome": "~4.6.3",
-    "unslider": "~2.0.3"
+    "owl.carousel": "^2.1.6"
   }
 }
